--- a/public/inicio/styles.css
+++ b/public/inicio/styles.css
@@ -1,40 +1,431 @@
-.hero{
-    background-image: linear-gradient(120deg, rgba(224, 195, 252, 0.692) 0%,
-    rgba(142, 197, 252, 0.692) 100%), url("../imagenes/fondo1.jpg");/*degrade con imagen*/
-    width: 100%;/*ancho de la imagen*/
-    height: 657px;/*altura de la imagen*/
-    background-repeat: no-repeat;/*si la imagen no no ocupa el espacio no se repite*/
-    background-size: cover;/**/
-    background-position: center;/**/
-    background-attachment: fixed;/**/
-    position: relative;/**/
-    overflow: hidden;/*comando para que nada salga del hero*/
+*{
+    margin: 0;/*es para quitar el margen predeterminado*/
+    padding: 0;/*no deja distancia entre secciones*/
+    box-sizing: border-box;
+}
+html{
+    scroll-behavior: smooth;/*comportamiento del scroll*/
+}
+body{
+    font-family: 'Raleway', sans-serif;/*fuentes de texto */
+}
+header{
+    background-image: linear-gradient(-20deg, #b721ff 0%, #21d4fd 100%);
+    height: auto;
+    padding: 48px;
+    width: 100%;
+}
+.capsula{
+  width: 95%;
+  max-width: 1200px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin: auto;
+  }
+.capsula img{
+    display: block;
+    height: 450px;
+    object-fit: cover;
+    width: auto;
+    animation: arriba 2s ease-in;
+}
+.letras{
+    width: 50%;
+    color: #ffffff;
+}
+.letras h1{
+    font-size: 80px;
+    animation: moverDerecha 2s ease-in;
+}
+.letras h2{
+    font-size: 30px;
+    animation: moverIzquierda 2s ease-in;
+}
+.letras a{
+    display: inline-block;
+    color: #ffffff;
+    font-weight: 300;
+    text-decoration: none;
+    margin-top: 30px;
+    border: 1px solid #ffffff;
+    width: 150px;
+    border-radius: 100px;
+    text-align: center;
+    padding: 10px 0;
+    animation: arriba 2s ease-in;
+}
+@keyframes moverIzquierda{
+    0% {
+        opacity: 0;
+        transform: translateX(-100px);
     }
-    .textos-hero{
-        height: 500px;/*posicion del titulo en cuanto al techo */
-        color: rgb(246, 246, 246);/*color de la letra*/
-        display: flex;/*posicion de la letra fija */
-        flex-direction: column;/*organizacion de le la letra por columnas */
-        justify-content: center;/*posicion de de la letra */
-        align-items: center;/*lineamiento de la letra*/
+    100%{
+        opacity: 1;
+        transform: translate(0);
     }
+}
+@keyframes moverDerecha{
+    0% {
+        opacity: 0;
+        transform: translateX(100px);
+    }
+    100%{
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+@keyframes arriba{
+    0% {
+        opacity: 0;
+        transform: translateY(100px);
+    }
+    100%{
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+/*.hero{
+background-image: linear-gradient(120deg, rgba(214, 181, 245, 0.877) 0%,
+rgba(142, 197, 252, 0.459) 100%), url("../theme/images/recursos9.pg");/*degrade con image
+width: 100%;/*ancho de la image
+height: 650px;/*altura de la image
+background-repeat: no-repeat;/*si la imagen no no ocupa el espacio no se repit
+background-size: cover;/
+background-position: center;/
+background-attachment: fixed;/
+position: relative;/
+overflow: hidden;/*comando para que nada salga del her
+}
+/*.textos-hero{
+    height: 450px;/*posicion del titulo en cuanto al techo
+    color: rgb(0, 0, 0);/*color de la letra
+    display: flex;/*posicion de la letra fija
+    flex-direction: column;/*organizacion de le la letra por columnas
+    justify-content: center;/*posicion de de la letra
+    align-items: center;/*lineamiento de la letra
+
+}
+/*.textos-hero h1{
+    font-size: 80px;/*tamaño de la letra del titulo
+    -webkit-text-fill-color: #000000;
+    -webkit-text-stroke: 2px; text-shadow:  10px 3px 8px #f7f9fa;;
+    -webkit-text-stroke-color: rgb(0, 0, 0);
+}
+.textos-hero h2{
+    font-size: 70px;/*tamaño de la letra del titulo
+    -webkit-text-fill-color: #000000;
+    -webkit-text-stroke: 2px; text-shadow:  10px 3px 8px #f7f9fa;;
+    -webkit-text-stroke-color: rgb(0, 0, 0);
+}
+.textos-hero p{
+    font-size: 30px;/*tamaño de la letra del parrafo
+    margin-bottom: 30px;/*distancia del boton en cuanto al parrafo
+}
+.textos-hero a{
+    display: inline-block;/*propiedades de bloque y linea
+    text-decoration: none;/*quita la linea inferior del enlase
+    padding: 12px 28px;/*tamaño del boton
+    background-image: linear-gradient(120deg, #276f85 0%, #30849e 100%);/*color del boton en drade
+    border-radius: 30px;/*circunferencia del boton
+    color: #ffffff;/*color de la letra del boton
+}*/
+.svg-hero{
+    position: absolute;/*pocionamiento de las ondas */
+    bottom: 0;
+    left: 0;
+    width: 100%;/*ancho de las ondas*/
+}
+/*estilos generales*/
+.contenedor,
+.wave-contenedor{
+    width: 90%;
+    max-width: 1000px;
+    overflow: hidden;
+    margin:auto;
+    padding: 0 0 80px 0;/*espaciado entre secciones*/
+}
+.contenedor{
+    padding: 10px 0;/*espacio de entre secciones abajo*/
+}
+.titulo{/*arreglo a todos las clase de titulos*/
+    font-weight: 500;/*grosor de la letra del titulo*/
+    font-size: 35px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+.titulo.left{
+    text-align: center;/*todos los textos que tengan la propirdad left se alinen a la izquierda*/
+}
+.titulo.right{
+    text-align: right;/*todos los textos que tengan la propirdad left se alinen a la derecha*/
+}
+/*section*/
+.webside{
+    display: flex;/*pone elementos uno al lado del otro*/
+    justify-content: space-between;/*y esto le da espacio entre ellos*/
+}
+.webside img{
+    width: 50%;/*Ancho de la imagen */
+
+}
+.webside .contenedor-textos-main{
+    width: 40%;/*ancho del contenedor del texto */
+}
+.parrafo{
+    text-align: justify;/*estilo alineacion de texto */
+    margin-bottom: 30px;/*distancia entre el techo y el boton*/
+}
+.cta{/*diseño de los botones de envio */
+    display:inline-block;
+    text-decoration: none;
+    background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
+    padding: 12px 18px;
+    border-radius: 30px;
+    color: rgb(255, 255, 255);
+}
+
+/*info*/
+.info{/*estilo derecuadro*/
+    background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
+    color: rgb(12, 12, 12);/*color de la letra*/
+    text-align:center;
+    height: 300px;/*alto de recuadro del degrade */
+}
+/*Cards*/
+.content-cards{
+    display:flex;/*los pone uno al lado del otro*/
+    width: 100%;/*ancho de la tarjeta */
+    justify-content: space-evenly;/*espacio equitativo entra cada uno */
+    flex-wrap: wrap;/*si sobrepasa el elemento que se ponga uno debajo del otro */
+}
+.card{
+    width: 30%;
+    text-align:center;
+    height: 350px;
+    box-shadow: 0 0 3px 0 rgba(0, 0, 0, .5);/*sobra de la tarjeta*/
+    transform: scale(1);
+    transition: transform 0.6s;
+}
+.card:hover{
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);/*color del borde*/
+    transform: scale(1.05);/*tamaño del efecto*/
+    cursor: pointer;/*efecto del cursor*/
+}
+.card i{
+    margin: 30px 0 20px 0;/*espacio de icono en margen*/
+    color: #4047ac;/*color icono*/
+    font-size: 50px;/*tamaño icono*/
+}
+.card p{
+    font-weight: 350;/*nivel de grosor del parrafo */
+    font-size: 15px;/*tamaño de parrafo*/
+    margin-bottom: 40px;/*distancia del boton con referencia al techo*/
+}
+/*galeria*/
+.galeria{
+    background: #c4c0c071;/*color del contenedor de las imagenes*/
+    height: 600px; /*alto del contenedor */
+}
+.galeria-cont{
+    width: 100%;
+    height: 500px;
+     display: flex;
+     flex-wrap: wrap;
+    justify-content: space-evenly;
+     overflow: hidden;
+}
+.galeria-cont>img{
+    width: 20%;/*ancho dela imagen*/
+    object-fit: cover;/*organizacion de las imagenes*/
+    margin-bottom: 50px;/*espacio de las img de la primera fila con la segunda*/
+    display: block;
+    box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, .5);/*sonbra de la caja */
+    overflow: hidden;
+    transform: scale(1);
+    transition: transform 0.7s;
+    border-radius: 100px;
+}
+.galeria-cont>img:hover{
+    box-shadow: 8PX 8PX 8px 0 rgba(216, 42, 42, 0.5);/*color del borde*/
+    transform: scale(1.05);/*tamaño del efecto*/
+    cursor: pointer;/*efecto del cursor*/
+}
+/*info2*/
+.last-section{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding-bottom: 100px;
+}
+.last-section iframe{
+width: 100%;
+height: 80%;
+}
+.last-section .contenedor-textos-main{
+width: 40%;
+}
+
+/*footer*/
+.container-footer{
+    width: 50;
+    padding: 10px 0;
+    background: rgba(0, 0, 0, 0.932);
+    margin: top 10px;
+}
+.container-footer footer{
+    max-width: 1300px;
+    margin: auto;
+}
+.container-footer footer .logo-footer{
+   text-align: center;
+}
+.container-footer footer .logo-footer img{
+    width: 400px;
+}
+.container-footer footer  .redes-footer{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+.container-footer footer .redes-footer .icon-redes-footer{
+    font-size: 30px;
+    margin: 20px;
+    background: #004761;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+    color: #4eacba;
+}
+.container-footer footer .redes-footer .fa-facebook-f:hover{
+    background: #41579A;
+    color: #ffffff;
+}
+.container-footer footer .redes-footer .fa-twitter:hover{
+    background: #36b9ff;
+    color: #ffffff;
+}
+.container-footer footer .redes-footer .fa-instagram:hover{
+    background: linear-gradient(to top right, #fcde30, #e9712a, #d2313b, #ae4198, #7540a1, #5443a8);
+    color: #ffffff;
+}
+.container-footer footer .redes-footer .fa-linkedin-in:hover{
+    background: #0274b3;
+    color: #ffffff;
+}
+.container-footer footer hr{
+margin-top: 10px;
+border: none;
+height: 2px;
+background: #2e2d2dde;
+}
+.container-footer h6{
+    text-align: center;
+    margin-top: 10px;
+    color: rgb(46, 44, 44);
+    font-weight: 500px;
+}
+
+@media screen and (max-width:800px){
     .textos-hero h1{
-        font-size: 80px;/*tamaño de la letra del titulo*/
+        text-align: center;
+        font-size: 50px;
     }
-    .textos-hero p{
-        font-size: 30px;/*tamaño de la letra del parrafo*/
-        margin-bottom: 30px;/*distancia del boton en cuanto al parrafo*/
+    /*Estilos generales*/
+    .titulo{
+        font-size: 35px;
     }
-    .textos-hero a{
-        display: inline-block;/*propiedades de bloque y linea */
-        text-decoration: none;/*quita la linea inferior del enlase*/
-        padding: 12px 28px;/*tamaño del boton */
-        background-image: linear-gradient(120deg, #f093fb 0%, #f5576c 100%);/*color del boton en drade*/
-        border-radius: 30px;/*circunferencia del boton */
-        color: #ffffff;/*color de la letra del boton*/
+    .titulo.left{
+        text-align: center;
     }
-    .svg-hero{
-        position: absolute;/*pocionamiento de las ondas */
-        bottom: 0;
-        left: 0;
-        width: 100%;/*ancho de las ondas*/
+.info p{
+    text-align: center;
+}
+/*section*/
+.webside{
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+}
+.webside img{
+    width: 100%;
+}
+.webside .contenedor-textos-main{
+    width: 100%;
+}
+/*cards*/
+.card{
+    width: 90%;
+    margin-bottom: 20px;
+}
+/*galeria*/
+.galeria-cont>img{
+    width: 48%;
+}
+ /*last*/
+ .last-section img{
+     width: 98%;
+ }
+ .last-section .contenedor-textos-main{
+     width: 98%;
+     margin-bottom: 20px;
+ }
+}
+@media screen and(max-width:400px){
+    .titulo,
+    .textos-hero h1{
+        font-size: 20px;
+        text-align: center;
+    }
+    .card{
+        height: 1000px;
+    }
+    .webside .contenedor-textos-main{
+        margin-bottom: 30px;
+    }
+    .galeria-cont>img{
+        width: 97%;
+    }
+}
+*,*:after,*:before{
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
+}
+svg path{
+
+    animation:pathAnim 12s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    opacity: 1000;
+}
+svg path:nth-child(2){
+animation-delay: 0.5s;
+}
+svg path:nth-child(3){
+    animation-delay: 1s;
+}
+svg path:nth-child(4){
+    animation-delay: 2s;
+    }
+@keyframes pathAnim{
+    0%{
+        d: path("M0,192 C220,100,440,100,660,192 C880,290,1100,290,1320,192 L1320 300 L0 300");
+    }
+    25%{
+        d: path("M0,100 C220,100,440,292,660,292 C880,292,1100,100,1320,100 L1320 300 L0 300");
+    }
+    50%{
+        d: path("M0,192 C220,290,440,290,660,192 C880,100,1100,100,1320,192 L1320 300 L0 300");
+    }
+    75%{
+        d: path("M0,292 C220,292,440,100,660,100 C880,100,1100,292,1320,292 L1320 300 L0 300");
+    }
+    100%{
+        d: path("M0,192 C220,100,440,100,660,192 C880,290,1100,290,1320,192 L1320 300 L0 300");
+    }
+}
