--- a/public/inicio/styles.css
+++ b/public/inicio/styles.css
@@ -395,7 +395,7 @@ svg path:nth-child(4){
      img{
          height: 400px;
      }
-
+    }
 @media screen and (max-width:800px){
     img{
         height: 370px;
